// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ComicStrip
    actions={
        Object {
            "foo": [Function],
          }
    }
    addLineItemsStatus="foo"
    block={
        Object {
            "fields": Object {
              "backgroundColor": "foo",
              "description": "foo",
              "products": Array [
                Object {
                  "fields": Object {
                    "flavorDescription": "foo",
                    "image": Object {
                      "fields": Object {},
                      "sys": Object {},
                    },
                    "pintImage": Object {
                      "fields": Object {},
                      "sys": Object {},
                    },
                    "productHandle": "foo",
                    "productTitle": "foo",
                  },
                },
              ],
              "title": "foo",
            },
            "sys": Object {
              "contentType": Object {
                "sys": Object {},
              },
              "createdAt": "foo",
              "environment": Object {
                "sys": Object {},
              },
              "id": "foo",
              "locale": "foo",
              "revision": 0,
              "space": Object {
                "sys": Object {},
              },
              "type": "foo",
              "updatedAt": "foo",
            },
          }
    }
    checkout={
        Object {
            "completedAt": null,
            "currencyCode": "foo",
            "id": "foo",
            "lineItems": Array [
              Object {
                "foo": Object {},
              },
            ],
            "note": null,
            "subtotalPrice": "0",
            "totalPrice": "0",
          }
    }
    error={null}
    globalSettings={
        Object {
            "facebookLink": "foo",
            "footerIllustration": Object {
              "fields": Object {},
              "sys": Object {},
            },
            "instagramLink": "foo",
            "ourPledgeIcon": Object {
              "fields": Object {},
              "sys": Object {},
            },
            "title": "foo",
            "twitterLink": "foo",
          }
    }
    history={
        Object {
            "action": "foo",
            "block": [Function],
            "createHref": [Function],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "length": 0,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": "foo",
              "pathname": "foo",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
    }
    location={
        Object {
            "hash": "foo",
            "key": "foo",
            "pathname": "/foo",
            "search": "foo",
            "state": undefined,
          }
    }
    match={
        Object {
            "isExact": true,
            "params": Object {
              "productHandle": "foo",
            },
            "path": "/foo",
            "url": "/foo",
          }
    }
    model={
        Object {
            "action": Object {
              "payload": Object {},
              "type": "foo",
            },
            "isError": false,
            "value": Object {
              "items": Array [],
              "limit": 0,
              "skip": 0,
              "sys": Object {},
              "total": 0,
            },
          }
    }
    ourPledge={
        Object {
            "calloutImage": Object {
              "fields": Object {},
              "sys": Object {},
            },
            "overlayContentImage": Object {
              "fields": Object {},
              "sys": Object {},
            },
            "shippingInformation": "foo",
            "shippingPledge": "foo",
            "title": "foo",
          }
    }
    ourPledgeOverlayIsOpen={false}
    product={
        Object {
            "available": true,
            "blocks": Array [
              Object {},
            ],
            "cartDetails": "foo",
            "description": "foo",
            "flavorDescription": "foo",
            "gridImage": "foo",
            "handle": "foo",
            "id": "foo",
            "pintImage": "foo",
            "price": 0,
            "subItems": Array [],
            "subItemsAvailable": true,
            "title": "foo",
            "variants": Array [
              Object {},
            ],
          }
    }
    products={
        Object {
            "foo": Object {},
          }
    }
    setRef={[Function]}
    staticContext={undefined}
    view={[Function]}
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="block-headline center"
>
          The Artwork
</h2>,
        <div
          className="w100 flex justify-center"
>
          <Button
                    className="m1 xs-hide sm-hide "
                    color="madison-blue"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label=""
                    onClick={[Function]}
                    shadow={true}
                    to=""
                    type="button"
                    variant="primary-small"
          />
          <Carousel
                    arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                    arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                    className="w100 mx-auto md-hide lg-hide"
                    dotColor=""
                    index={0}
                    onChange={[Function]}
                    showArrows={true}
                    showDots={false}
                    showOnImage={false}
                    sliderClasses=""
          >
                    <div
                              className="flex justify-center"
                    >
                              <Button
                                        className="m1"
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label=""
                                        onClick={[Function]}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="primary-small"
                              />
                    </div>
          </Carousel>
</div>,
        <div
          className="flex justify-center w100"
>
          <div
                    className="py3 flex flex-column justify-center w100 container-width mx-auto undefined"
          >
                    <span
                              className="mt3 mb4 mx-auto px3 block-subheadline center text-container-width"
                    />
                    <div
                              className="flex flex-row"
                    >
                              <Carousel
                                        arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                                        arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                                        className="w100 mx-auto md-hide lg-hide"
                                        dotColor=""
                                        index={0}
                                        onChange={[Function]}
                                        showArrows={false}
                                        showDots={true}
                                        showOnImage={false}
                                        sliderClasses=""
                              >
                                        
                              </Carousel>
                    </div>
          </div>
</div>,
      ],
      "className": "flex flex-column justify-center items-center py3",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "The Artwork",
          "className": "block-headline center",
        },
        "ref": null,
        "rendered": "The Artwork",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            Array [
              <Button
                className="m1 xs-hide sm-hide "
                color="madison-blue"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label=""
                onClick={[Function]}
                shadow={true}
                to=""
                type="button"
                variant="primary-small"
/>,
            ],
            <Carousel
              arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
              arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
              className="w100 mx-auto md-hide lg-hide"
              dotColor=""
              index={0}
              onChange={[Function]}
              showArrows={true}
              showDots={false}
              showOnImage={false}
              sliderClasses=""
>
              <div
                            className="flex justify-center"
              >
                            <Button
                                          className="m1"
                                          color="madison-blue"
                                          disabled={false}
                                          fullWidth={false}
                                          hover="shadow"
                                          label=""
                                          onClick={[Function]}
                                          shadow={false}
                                          to=""
                                          type="button"
                                          variant="primary-small"
                            />
              </div>
</Carousel>,
          ],
          "className": "w100 flex justify-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": null,
              "className": "m1 xs-hide sm-hide ",
              "color": "madison-blue",
              "disabled": false,
              "fullWidth": false,
              "hover": "shadow",
              "label": "",
              "onClick": [Function],
              "shadow": true,
              "to": "",
              "type": "button",
              "variant": "primary-small",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "arrowNextImage": "/assets/images/icon-circle-right-arrow.svg",
              "arrowPreviousImage": "/assets/images/icon-circle-left-arrow.svg",
              "children": Array [
                <div
                  className="flex justify-center"
>
                  <Button
                                    className="m1"
                                    color="madison-blue"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label=""
                                    onClick={[Function]}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="primary-small"
                  />
</div>,
              ],
              "className": "w100 mx-auto md-hide lg-hide",
              "dotColor": "",
              "index": 0,
              "onChange": [Function],
              "showArrows": true,
              "showDots": false,
              "showOnImage": false,
              "sliderClasses": "",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "host",
                "props": Object {
                  "children": <Button
                    className="m1"
                    color="madison-blue"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label=""
                    onClick={[Function]}
                    shadow={false}
                    to=""
                    type="button"
                    variant="primary-small"
/>,
                  "className": "flex justify-center",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": null,
                    "className": "m1",
                    "color": "madison-blue",
                    "disabled": false,
                    "fullWidth": false,
                    "hover": "shadow",
                    "label": "",
                    "onClick": [Function],
                    "shadow": false,
                    "to": "",
                    "type": "button",
                    "variant": "primary-small",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
            ],
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="py3 flex flex-column justify-center w100 container-width mx-auto undefined"
>
              <span
                            className="mt3 mb4 mx-auto px3 block-subheadline center text-container-width"
              />
              <div
                            className="flex flex-row"
              >
                            <Carousel
                                          arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                                          arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                                          className="w100 mx-auto md-hide lg-hide"
                                          dotColor=""
                                          index={0}
                                          onChange={[Function]}
                                          showArrows={false}
                                          showDots={true}
                                          showOnImage={false}
                                          sliderClasses=""
                            >
                                          
                            </Carousel>
              </div>
</div>,
          ],
          "className": "flex justify-center w100",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="mt3 mb4 mx-auto px3 block-subheadline center text-container-width"
/>,
                <div
                  className="flex flex-row"
>
                  <Carousel
                                    arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                                    arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                                    className="w100 mx-auto md-hide lg-hide"
                                    dotColor=""
                                    index={0}
                                    onChange={[Function]}
                                    showArrows={false}
                                    showDots={true}
                                    showOnImage={false}
                                    sliderClasses=""
                  >
                                    
                  </Carousel>
</div>,
              ],
              "className": "py3 flex flex-column justify-center w100 container-width mx-auto undefined",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "",
                  "className": "mt3 mb4 mx-auto px3 block-subheadline center text-container-width",
                },
                "ref": null,
                "rendered": "",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    Array [],
                    <Carousel
                      arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                      arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                      className="w100 mx-auto md-hide lg-hide"
                      dotColor=""
                      index={0}
                      onChange={[Function]}
                      showArrows={false}
                      showDots={true}
                      showOnImage={false}
                      sliderClasses=""
>
                      
</Carousel>,
                  ],
                  "className": "flex flex-row",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "arrowNextImage": "/assets/images/icon-circle-right-arrow.svg",
                      "arrowPreviousImage": "/assets/images/icon-circle-left-arrow.svg",
                      "children": Array [],
                      "className": "w100 mx-auto md-hide lg-hide",
                      "dotColor": "",
                      "index": 0,
                      "onChange": [Function],
                      "showArrows": false,
                      "showDots": true,
                      "showOnImage": false,
                      "sliderClasses": "",
                    },
                    "ref": null,
                    "rendered": Array [],
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="block-headline center"
>
            The Artwork
</h2>,
          <div
            className="w100 flex justify-center"
>
            <Button
                        className="m1 xs-hide sm-hide "
                        color="madison-blue"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label=""
                        onClick={[Function]}
                        shadow={true}
                        to=""
                        type="button"
                        variant="primary-small"
            />
            <Carousel
                        arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                        arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                        className="w100 mx-auto md-hide lg-hide"
                        dotColor=""
                        index={0}
                        onChange={[Function]}
                        showArrows={true}
                        showDots={false}
                        showOnImage={false}
                        sliderClasses=""
            >
                        <div
                                    className="flex justify-center"
                        >
                                    <Button
                                                className="m1"
                                                color="madison-blue"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label=""
                                                onClick={[Function]}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="primary-small"
                                    />
                        </div>
            </Carousel>
</div>,
          <div
            className="flex justify-center w100"
>
            <div
                        className="py3 flex flex-column justify-center w100 container-width mx-auto undefined"
            >
                        <span
                                    className="mt3 mb4 mx-auto px3 block-subheadline center text-container-width"
                        />
                        <div
                                    className="flex flex-row"
                        >
                                    <Carousel
                                                arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                                                arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                                                className="w100 mx-auto md-hide lg-hide"
                                                dotColor=""
                                                index={0}
                                                onChange={[Function]}
                                                showArrows={false}
                                                showDots={true}
                                                showOnImage={false}
                                                sliderClasses=""
                                    >
                                                
                                    </Carousel>
                        </div>
            </div>
</div>,
        ],
        "className": "flex flex-column justify-center items-center py3",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "The Artwork",
            "className": "block-headline center",
          },
          "ref": null,
          "rendered": "The Artwork",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [
                <Button
                  className="m1 xs-hide sm-hide "
                  color="madison-blue"
                  disabled={false}
                  fullWidth={false}
                  hover="shadow"
                  label=""
                  onClick={[Function]}
                  shadow={true}
                  to=""
                  type="button"
                  variant="primary-small"
/>,
              ],
              <Carousel
                arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                className="w100 mx-auto md-hide lg-hide"
                dotColor=""
                index={0}
                onChange={[Function]}
                showArrows={true}
                showDots={false}
                showOnImage={false}
                sliderClasses=""
>
                <div
                                className="flex justify-center"
                >
                                <Button
                                                className="m1"
                                                color="madison-blue"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label=""
                                                onClick={[Function]}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="primary-small"
                                />
                </div>
</Carousel>,
            ],
            "className": "w100 flex justify-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "className": "m1 xs-hide sm-hide ",
                "color": "madison-blue",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "",
                "onClick": [Function],
                "shadow": true,
                "to": "",
                "type": "button",
                "variant": "primary-small",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "arrowNextImage": "/assets/images/icon-circle-right-arrow.svg",
                "arrowPreviousImage": "/assets/images/icon-circle-left-arrow.svg",
                "children": Array [
                  <div
                    className="flex justify-center"
>
                    <Button
                                        className="m1"
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label=""
                                        onClick={[Function]}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="primary-small"
                    />
</div>,
                ],
                "className": "w100 mx-auto md-hide lg-hide",
                "dotColor": "",
                "index": 0,
                "onChange": [Function],
                "showArrows": true,
                "showDots": false,
                "showOnImage": false,
                "sliderClasses": "",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "host",
                  "props": Object {
                    "children": <Button
                      className="m1"
                      color="madison-blue"
                      disabled={false}
                      fullWidth={false}
                      hover="shadow"
                      label=""
                      onClick={[Function]}
                      shadow={false}
                      to=""
                      type="button"
                      variant="primary-small"
/>,
                    "className": "flex justify-center",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": null,
                      "className": "m1",
                      "color": "madison-blue",
                      "disabled": false,
                      "fullWidth": false,
                      "hover": "shadow",
                      "label": "",
                      "onClick": [Function],
                      "shadow": false,
                      "to": "",
                      "type": "button",
                      "variant": "primary-small",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
              ],
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="py3 flex flex-column justify-center w100 container-width mx-auto undefined"
>
                <span
                                className="mt3 mb4 mx-auto px3 block-subheadline center text-container-width"
                />
                <div
                                className="flex flex-row"
                >
                                <Carousel
                                                arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                                                arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                                                className="w100 mx-auto md-hide lg-hide"
                                                dotColor=""
                                                index={0}
                                                onChange={[Function]}
                                                showArrows={false}
                                                showDots={true}
                                                showOnImage={false}
                                                sliderClasses=""
                                >
                                                
                                </Carousel>
                </div>
</div>,
            ],
            "className": "flex justify-center w100",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="mt3 mb4 mx-auto px3 block-subheadline center text-container-width"
/>,
                  <div
                    className="flex flex-row"
>
                    <Carousel
                                        arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                                        arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                                        className="w100 mx-auto md-hide lg-hide"
                                        dotColor=""
                                        index={0}
                                        onChange={[Function]}
                                        showArrows={false}
                                        showDots={true}
                                        showOnImage={false}
                                        sliderClasses=""
                    >
                                        
                    </Carousel>
</div>,
                ],
                "className": "py3 flex flex-column justify-center w100 container-width mx-auto undefined",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "",
                    "className": "mt3 mb4 mx-auto px3 block-subheadline center text-container-width",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      Array [],
                      <Carousel
                        arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                        arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                        className="w100 mx-auto md-hide lg-hide"
                        dotColor=""
                        index={0}
                        onChange={[Function]}
                        showArrows={false}
                        showDots={true}
                        showOnImage={false}
                        sliderClasses=""
>
                        
</Carousel>,
                    ],
                    "className": "flex flex-row",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "arrowNextImage": "/assets/images/icon-circle-right-arrow.svg",
                        "arrowPreviousImage": "/assets/images/icon-circle-left-arrow.svg",
                        "children": Array [],
                        "className": "w100 mx-auto md-hide lg-hide",
                        "dotColor": "",
                        "index": 0,
                        "onChange": [Function],
                        "showArrows": false,
                        "showDots": true,
                        "showOnImage": false,
                        "sliderClasses": "",
                      },
                      "ref": null,
                      "rendered": Array [],
                      "type": [Function],
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ComicStrip
    block={
        Object {
            "fields": Object {
              "backgroundColor": "",
              "products": Array [
                Object {
                  "fields": Object {
                    "comics": Array [
                      Object {
                        "fields": Object {
                          "file": Object {
                            "url": "",
                          },
                        },
                      },
                    ],
                    "title": "",
                  },
                },
              ],
              "title": "",
            },
          }
    }
    setRef={[Function]}
    z={1}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="block-headline center"
>
          The Artwork
</h2>,
        <div
          className="w100 flex justify-center"
>
          <Button
                    className="m1 xs-hide sm-hide "
                    color="madison-blue"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label=""
                    onClick={[Function]}
                    shadow={true}
                    to=""
                    type="button"
                    variant="primary-small"
          />
          <Carousel
                    arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                    arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                    className="w100 mx-auto md-hide lg-hide"
                    dotColor=""
                    index={0}
                    onChange={[Function]}
                    showArrows={true}
                    showDots={false}
                    showOnImage={false}
                    sliderClasses=""
          >
                    <div
                              className="flex justify-center"
                    >
                              <Button
                                        className="m1"
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label=""
                                        onClick={[Function]}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="primary-small"
                              />
                    </div>
          </Carousel>
</div>,
        <div
          className="flex justify-center w100"
>
          <div
                    className="py3 flex flex-column justify-center w100 container-width mx-auto undefined"
          >
                    <span
                              className="mt3 mb4 mx-auto px3 block-subheadline center text-container-width"
                    />
                    <div
                              className="flex flex-row"
                    >
                              <div
                                        className="transition-slide-up-large m2 xs-hide sm-hide"
                              >
                                        <Image
                                                  alt=""
                                                  bg={false}
                                                  className="w100"
                                                  onImgLoad={[Function]}
                                                  src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                  style={Object {}}
                                        />
                              </div>
                              <Carousel
                                        arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                                        arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                                        className="w100 mx-auto md-hide lg-hide"
                                        dotColor=""
                                        index={0}
                                        onChange={[Function]}
                                        showArrows={false}
                                        showDots={true}
                                        showOnImage={false}
                                        sliderClasses=""
                              >
                                        <div
                                                  className="w-auto mx-auto"
                                        >
                                                  <Image
                                                            alt=""
                                                            bg={false}
                                                            className="w100"
                                                            onImgLoad={[Function]}
                                                            src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                            style={Object {}}
                                                  />
                                        </div>
                              </Carousel>
                    </div>
          </div>
</div>,
      ],
      "className": "flex flex-column justify-center items-center py3",
      "style": Object {
        "zIndex": 1,
      },
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "The Artwork",
          "className": "block-headline center",
        },
        "ref": null,
        "rendered": "The Artwork",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            Array [
              <Button
                className="m1 xs-hide sm-hide "
                color="madison-blue"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label=""
                onClick={[Function]}
                shadow={true}
                to=""
                type="button"
                variant="primary-small"
/>,
            ],
            <Carousel
              arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
              arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
              className="w100 mx-auto md-hide lg-hide"
              dotColor=""
              index={0}
              onChange={[Function]}
              showArrows={true}
              showDots={false}
              showOnImage={false}
              sliderClasses=""
>
              <div
                            className="flex justify-center"
              >
                            <Button
                                          className="m1"
                                          color="madison-blue"
                                          disabled={false}
                                          fullWidth={false}
                                          hover="shadow"
                                          label=""
                                          onClick={[Function]}
                                          shadow={false}
                                          to=""
                                          type="button"
                                          variant="primary-small"
                            />
              </div>
</Carousel>,
          ],
          "className": "w100 flex justify-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": null,
              "className": "m1 xs-hide sm-hide ",
              "color": "madison-blue",
              "disabled": false,
              "fullWidth": false,
              "hover": "shadow",
              "label": "",
              "onClick": [Function],
              "shadow": true,
              "to": "",
              "type": "button",
              "variant": "primary-small",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "arrowNextImage": "/assets/images/icon-circle-right-arrow.svg",
              "arrowPreviousImage": "/assets/images/icon-circle-left-arrow.svg",
              "children": Array [
                <div
                  className="flex justify-center"
>
                  <Button
                                    className="m1"
                                    color="madison-blue"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label=""
                                    onClick={[Function]}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="primary-small"
                  />
</div>,
              ],
              "className": "w100 mx-auto md-hide lg-hide",
              "dotColor": "",
              "index": 0,
              "onChange": [Function],
              "showArrows": true,
              "showDots": false,
              "showOnImage": false,
              "sliderClasses": "",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "host",
                "props": Object {
                  "children": <Button
                    className="m1"
                    color="madison-blue"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label=""
                    onClick={[Function]}
                    shadow={false}
                    to=""
                    type="button"
                    variant="primary-small"
/>,
                  "className": "flex justify-center",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": null,
                    "className": "m1",
                    "color": "madison-blue",
                    "disabled": false,
                    "fullWidth": false,
                    "hover": "shadow",
                    "label": "",
                    "onClick": [Function],
                    "shadow": false,
                    "to": "",
                    "type": "button",
                    "variant": "primary-small",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
            ],
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="py3 flex flex-column justify-center w100 container-width mx-auto undefined"
>
              <span
                            className="mt3 mb4 mx-auto px3 block-subheadline center text-container-width"
              />
              <div
                            className="flex flex-row"
              >
                            <div
                                          className="transition-slide-up-large m2 xs-hide sm-hide"
                            >
                                          <Image
                                                        alt=""
                                                        bg={false}
                                                        className="w100"
                                                        onImgLoad={[Function]}
                                                        src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                        style={Object {}}
                                          />
                            </div>
                            <Carousel
                                          arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                                          arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                                          className="w100 mx-auto md-hide lg-hide"
                                          dotColor=""
                                          index={0}
                                          onChange={[Function]}
                                          showArrows={false}
                                          showDots={true}
                                          showOnImage={false}
                                          sliderClasses=""
                            >
                                          <div
                                                        className="w-auto mx-auto"
                                          >
                                                        <Image
                                                                      alt=""
                                                                      bg={false}
                                                                      className="w100"
                                                                      onImgLoad={[Function]}
                                                                      src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                                      style={Object {}}
                                                        />
                                          </div>
                            </Carousel>
              </div>
</div>,
          ],
          "className": "flex justify-center w100",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="mt3 mb4 mx-auto px3 block-subheadline center text-container-width"
/>,
                <div
                  className="flex flex-row"
>
                  <div
                                    className="transition-slide-up-large m2 xs-hide sm-hide"
                  >
                                    <Image
                                                      alt=""
                                                      bg={false}
                                                      className="w100"
                                                      onImgLoad={[Function]}
                                                      src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                      style={Object {}}
                                    />
                  </div>
                  <Carousel
                                    arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                                    arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                                    className="w100 mx-auto md-hide lg-hide"
                                    dotColor=""
                                    index={0}
                                    onChange={[Function]}
                                    showArrows={false}
                                    showDots={true}
                                    showOnImage={false}
                                    sliderClasses=""
                  >
                                    <div
                                                      className="w-auto mx-auto"
                                    >
                                                      <Image
                                                                        alt=""
                                                                        bg={false}
                                                                        className="w100"
                                                                        onImgLoad={[Function]}
                                                                        src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                                        style={Object {}}
                                                      />
                                    </div>
                  </Carousel>
</div>,
              ],
              "className": "py3 flex flex-column justify-center w100 container-width mx-auto undefined",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "",
                  "className": "mt3 mb4 mx-auto px3 block-subheadline center text-container-width",
                },
                "ref": null,
                "rendered": "",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    Array [
                      <div
                        className="transition-slide-up-large m2 xs-hide sm-hide"
>
                        <Image
                                                alt=""
                                                bg={false}
                                                className="w100"
                                                onImgLoad={[Function]}
                                                src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                style={Object {}}
                        />
</div>,
                    ],
                    <Carousel
                      arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                      arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                      className="w100 mx-auto md-hide lg-hide"
                      dotColor=""
                      index={0}
                      onChange={[Function]}
                      showArrows={false}
                      showDots={true}
                      showOnImage={false}
                      sliderClasses=""
>
                      <div
                                            className="w-auto mx-auto"
                      >
                                            <Image
                                                                  alt=""
                                                                  bg={false}
                                                                  className="w100"
                                                                  onImgLoad={[Function]}
                                                                  src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                                  style={Object {}}
                                            />
                      </div>
</Carousel>,
                  ],
                  "className": "flex flex-row",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "0",
                    "nodeType": "host",
                    "props": Object {
                      "children": <Image
                        alt=""
                        bg={false}
                        className="w100"
                        onImgLoad={[Function]}
                        src="?w=1200&fm=jpg&fl=progressive&q=90"
                        style={Object {}}
/>,
                      "className": "transition-slide-up-large m2 xs-hide sm-hide",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "alt": "",
                        "bg": false,
                        "children": null,
                        "className": "w100",
                        "onImgLoad": [Function],
                        "src": "?w=1200&fm=jpg&fl=progressive&q=90",
                        "style": Object {},
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "arrowNextImage": "/assets/images/icon-circle-right-arrow.svg",
                      "arrowPreviousImage": "/assets/images/icon-circle-left-arrow.svg",
                      "children": Array [
                        <div
                          className="w-auto mx-auto"
>
                          <Image
                                                    alt=""
                                                    bg={false}
                                                    className="w100"
                                                    onImgLoad={[Function]}
                                                    src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                    style={Object {}}
                          />
</div>,
                      ],
                      "className": "w100 mx-auto md-hide lg-hide",
                      "dotColor": "",
                      "index": 0,
                      "onChange": [Function],
                      "showArrows": false,
                      "showDots": true,
                      "showOnImage": false,
                      "sliderClasses": "",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": "0",
                        "nodeType": "host",
                        "props": Object {
                          "children": <Image
                            alt=""
                            bg={false}
                            className="w100"
                            onImgLoad={[Function]}
                            src="?w=1200&fm=jpg&fl=progressive&q=90"
                            style={Object {}}
/>,
                          "className": "w-auto mx-auto",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "class",
                          "props": Object {
                            "alt": "",
                            "bg": false,
                            "children": null,
                            "className": "w100",
                            "onImgLoad": [Function],
                            "src": "?w=1200&fm=jpg&fl=progressive&q=90",
                            "style": Object {},
                          },
                          "ref": null,
                          "rendered": null,
                          "type": [Function],
                        },
                        "type": "div",
                      },
                    ],
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="block-headline center"
>
            The Artwork
</h2>,
          <div
            className="w100 flex justify-center"
>
            <Button
                        className="m1 xs-hide sm-hide "
                        color="madison-blue"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label=""
                        onClick={[Function]}
                        shadow={true}
                        to=""
                        type="button"
                        variant="primary-small"
            />
            <Carousel
                        arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                        arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                        className="w100 mx-auto md-hide lg-hide"
                        dotColor=""
                        index={0}
                        onChange={[Function]}
                        showArrows={true}
                        showDots={false}
                        showOnImage={false}
                        sliderClasses=""
            >
                        <div
                                    className="flex justify-center"
                        >
                                    <Button
                                                className="m1"
                                                color="madison-blue"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label=""
                                                onClick={[Function]}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="primary-small"
                                    />
                        </div>
            </Carousel>
</div>,
          <div
            className="flex justify-center w100"
>
            <div
                        className="py3 flex flex-column justify-center w100 container-width mx-auto undefined"
            >
                        <span
                                    className="mt3 mb4 mx-auto px3 block-subheadline center text-container-width"
                        />
                        <div
                                    className="flex flex-row"
                        >
                                    <div
                                                className="transition-slide-up-large m2 xs-hide sm-hide"
                                    >
                                                <Image
                                                            alt=""
                                                            bg={false}
                                                            className="w100"
                                                            onImgLoad={[Function]}
                                                            src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                            style={Object {}}
                                                />
                                    </div>
                                    <Carousel
                                                arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                                                arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                                                className="w100 mx-auto md-hide lg-hide"
                                                dotColor=""
                                                index={0}
                                                onChange={[Function]}
                                                showArrows={false}
                                                showDots={true}
                                                showOnImage={false}
                                                sliderClasses=""
                                    >
                                                <div
                                                            className="w-auto mx-auto"
                                                >
                                                            <Image
                                                                        alt=""
                                                                        bg={false}
                                                                        className="w100"
                                                                        onImgLoad={[Function]}
                                                                        src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                                        style={Object {}}
                                                            />
                                                </div>
                                    </Carousel>
                        </div>
            </div>
</div>,
        ],
        "className": "flex flex-column justify-center items-center py3",
        "style": Object {
          "zIndex": 1,
        },
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "The Artwork",
            "className": "block-headline center",
          },
          "ref": null,
          "rendered": "The Artwork",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [
                <Button
                  className="m1 xs-hide sm-hide "
                  color="madison-blue"
                  disabled={false}
                  fullWidth={false}
                  hover="shadow"
                  label=""
                  onClick={[Function]}
                  shadow={true}
                  to=""
                  type="button"
                  variant="primary-small"
/>,
              ],
              <Carousel
                arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                className="w100 mx-auto md-hide lg-hide"
                dotColor=""
                index={0}
                onChange={[Function]}
                showArrows={true}
                showDots={false}
                showOnImage={false}
                sliderClasses=""
>
                <div
                                className="flex justify-center"
                >
                                <Button
                                                className="m1"
                                                color="madison-blue"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label=""
                                                onClick={[Function]}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="primary-small"
                                />
                </div>
</Carousel>,
            ],
            "className": "w100 flex justify-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "className": "m1 xs-hide sm-hide ",
                "color": "madison-blue",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "",
                "onClick": [Function],
                "shadow": true,
                "to": "",
                "type": "button",
                "variant": "primary-small",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "arrowNextImage": "/assets/images/icon-circle-right-arrow.svg",
                "arrowPreviousImage": "/assets/images/icon-circle-left-arrow.svg",
                "children": Array [
                  <div
                    className="flex justify-center"
>
                    <Button
                                        className="m1"
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label=""
                                        onClick={[Function]}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="primary-small"
                    />
</div>,
                ],
                "className": "w100 mx-auto md-hide lg-hide",
                "dotColor": "",
                "index": 0,
                "onChange": [Function],
                "showArrows": true,
                "showDots": false,
                "showOnImage": false,
                "sliderClasses": "",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "host",
                  "props": Object {
                    "children": <Button
                      className="m1"
                      color="madison-blue"
                      disabled={false}
                      fullWidth={false}
                      hover="shadow"
                      label=""
                      onClick={[Function]}
                      shadow={false}
                      to=""
                      type="button"
                      variant="primary-small"
/>,
                    "className": "flex justify-center",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": null,
                      "className": "m1",
                      "color": "madison-blue",
                      "disabled": false,
                      "fullWidth": false,
                      "hover": "shadow",
                      "label": "",
                      "onClick": [Function],
                      "shadow": false,
                      "to": "",
                      "type": "button",
                      "variant": "primary-small",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
              ],
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="py3 flex flex-column justify-center w100 container-width mx-auto undefined"
>
                <span
                                className="mt3 mb4 mx-auto px3 block-subheadline center text-container-width"
                />
                <div
                                className="flex flex-row"
                >
                                <div
                                                className="transition-slide-up-large m2 xs-hide sm-hide"
                                >
                                                <Image
                                                                alt=""
                                                                bg={false}
                                                                className="w100"
                                                                onImgLoad={[Function]}
                                                                src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                                style={Object {}}
                                                />
                                </div>
                                <Carousel
                                                arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                                                arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                                                className="w100 mx-auto md-hide lg-hide"
                                                dotColor=""
                                                index={0}
                                                onChange={[Function]}
                                                showArrows={false}
                                                showDots={true}
                                                showOnImage={false}
                                                sliderClasses=""
                                >
                                                <div
                                                                className="w-auto mx-auto"
                                                >
                                                                <Image
                                                                                alt=""
                                                                                bg={false}
                                                                                className="w100"
                                                                                onImgLoad={[Function]}
                                                                                src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                                                style={Object {}}
                                                                />
                                                </div>
                                </Carousel>
                </div>
</div>,
            ],
            "className": "flex justify-center w100",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="mt3 mb4 mx-auto px3 block-subheadline center text-container-width"
/>,
                  <div
                    className="flex flex-row"
>
                    <div
                                        className="transition-slide-up-large m2 xs-hide sm-hide"
                    >
                                        <Image
                                                            alt=""
                                                            bg={false}
                                                            className="w100"
                                                            onImgLoad={[Function]}
                                                            src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                            style={Object {}}
                                        />
                    </div>
                    <Carousel
                                        arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                                        arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                                        className="w100 mx-auto md-hide lg-hide"
                                        dotColor=""
                                        index={0}
                                        onChange={[Function]}
                                        showArrows={false}
                                        showDots={true}
                                        showOnImage={false}
                                        sliderClasses=""
                    >
                                        <div
                                                            className="w-auto mx-auto"
                                        >
                                                            <Image
                                                                                alt=""
                                                                                bg={false}
                                                                                className="w100"
                                                                                onImgLoad={[Function]}
                                                                                src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                                                style={Object {}}
                                                            />
                                        </div>
                    </Carousel>
</div>,
                ],
                "className": "py3 flex flex-column justify-center w100 container-width mx-auto undefined",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "",
                    "className": "mt3 mb4 mx-auto px3 block-subheadline center text-container-width",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      Array [
                        <div
                          className="transition-slide-up-large m2 xs-hide sm-hide"
>
                          <Image
                                                    alt=""
                                                    bg={false}
                                                    className="w100"
                                                    onImgLoad={[Function]}
                                                    src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                    style={Object {}}
                          />
</div>,
                      ],
                      <Carousel
                        arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
                        arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
                        className="w100 mx-auto md-hide lg-hide"
                        dotColor=""
                        index={0}
                        onChange={[Function]}
                        showArrows={false}
                        showDots={true}
                        showOnImage={false}
                        sliderClasses=""
>
                        <div
                                                className="w-auto mx-auto"
                        >
                                                <Image
                                                                        alt=""
                                                                        bg={false}
                                                                        className="w100"
                                                                        onImgLoad={[Function]}
                                                                        src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                                        style={Object {}}
                                                />
                        </div>
</Carousel>,
                    ],
                    "className": "flex flex-row",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": "0",
                      "nodeType": "host",
                      "props": Object {
                        "children": <Image
                          alt=""
                          bg={false}
                          className="w100"
                          onImgLoad={[Function]}
                          src="?w=1200&fm=jpg&fl=progressive&q=90"
                          style={Object {}}
/>,
                        "className": "transition-slide-up-large m2 xs-hide sm-hide",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "alt": "",
                          "bg": false,
                          "children": null,
                          "className": "w100",
                          "onImgLoad": [Function],
                          "src": "?w=1200&fm=jpg&fl=progressive&q=90",
                          "style": Object {},
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "arrowNextImage": "/assets/images/icon-circle-right-arrow.svg",
                        "arrowPreviousImage": "/assets/images/icon-circle-left-arrow.svg",
                        "children": Array [
                          <div
                            className="w-auto mx-auto"
>
                            <Image
                                                        alt=""
                                                        bg={false}
                                                        className="w100"
                                                        onImgLoad={[Function]}
                                                        src="?w=1200&fm=jpg&fl=progressive&q=90"
                                                        style={Object {}}
                            />
</div>,
                        ],
                        "className": "w100 mx-auto md-hide lg-hide",
                        "dotColor": "",
                        "index": 0,
                        "onChange": [Function],
                        "showArrows": false,
                        "showDots": true,
                        "showOnImage": false,
                        "sliderClasses": "",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": "0",
                          "nodeType": "host",
                          "props": Object {
                            "children": <Image
                              alt=""
                              bg={false}
                              className="w100"
                              onImgLoad={[Function]}
                              src="?w=1200&fm=jpg&fl=progressive&q=90"
                              style={Object {}}
/>,
                            "className": "w-auto mx-auto",
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "class",
                            "props": Object {
                              "alt": "",
                              "bg": false,
                              "children": null,
                              "className": "w100",
                              "onImgLoad": [Function],
                              "src": "?w=1200&fm=jpg&fl=progressive&q=90",
                              "style": Object {},
                            },
                            "ref": null,
                            "rendered": null,
                            "type": [Function],
                          },
                          "type": "div",
                        },
                      ],
                      "type": [Function],
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
